deploy: 5d97f175833e1e7e6a65e3b00f98ce43023681ed

--- a/level/run_length_encoding.html
+++ b/level/run_length_encoding.html
@@ -176,8 +176,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="游程编码"><a class="header" href="#游程编码">游程编码</a></h1>
-<p>游程编码(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
+                        <h1 id="游程编码-"><a class="header" href="#游程编码-">游程编码 🗜️</a></h1>
+<p>游程编码(Run-length encoding, RLE)是无损数据压缩的一种形式, 常被应用于推箱子关卡和解决方案的压缩.</p>
 <pre><code class="language-txt">###
 #.###
 #*$ #
