deploy: 68b70c6daf8f7034b292e40446fb4ba1a9f1b67c

--- a/level/run_length_encoding.html
+++ b/level/run_length_encoding.html
@@ -176,101 +176,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="游程编码-"><a class="header" href="#游程编码-">游程编码 🗜️</a></h1>
-<p>游程编码(Run-length encoding, RLE)是无损数据压缩的一种形式, 常被应用于推箱子关卡和解决方案的压缩.</p>
-<pre><code class="language-txt">###
-#.###
-#*$ #
-# @ #
-#####
-</code></pre>
-<p>经 RLE 编码后可得:</p>
-<pre><code class="language-txt">3#
-#.3#
-#*$-#
-#--@#
-5#
-</code></pre>
-<p>可以看出, 虽然编码后的关卡有更小的体积, 但不再能直观地看出关卡的结构.</p>
-<p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
-<pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
-</code></pre>
-<p>只需要对原本的语句进行修改即可提供对 <code>|</code> 分割行的支持:</p>
-<pre><code class="language-rs">for line in str.lines() { ... SKIP ... }
-
-for line in str.split(['\n', '|']) { ... SKIP ... }
-</code></pre>
-<h2 id="编码"><a class="header" href="#编码">编码</a></h2>
-<p>下面是一个简单的 RLE 编码函数的实现:</p>
-<pre><code class="language-rs">pub fn rle_encode(str: &amp;str) -&gt; Result&lt;String, EncodeRleError&gt; {
-    let mut result = String::new();
-    let mut chars = str.chars().peekable();
-    let mut count = 0;
-    while let Some(char) = chars.next() {
-        if char.is_numeric() {
-            return Err(EncodeRleError::InvalidCharacter(char));
-        }
-        count += 1;
-        if chars.peek() != Some(&amp;char) {
-            if count &gt; 1 {
-                result.push_str(&amp;count.to_string());
-            }
-            result.push(char);
-            count = 0;
-        }
-    }
-    Ok(result)
-}
-</code></pre>
-<p>该方法不会使用括号包裹重复的相连子串以提高压缩率.</p>
-<h2 id="解码"><a class="header" href="#解码">解码</a></h2>
-<p>下面是一个 RLE 解码函数的实现:</p>
-<pre><code class="language-rs">pub fn rle_decode(str: &amp;str) -&gt; Result&lt;String, DecodeRleError&gt; {
-    let mut result = String::new();
-
-    let mut length_string = String::new();
-    let mut iter = str.chars();
-    while let Some(char) = iter.next() {
-        if char.is_ascii_digit() {
-            length_string.push(char);
-            continue;
-        }
-        let mut token = String::new();
-        if char == '(' {
-            let mut nesting_level = 0;
-            for char in &amp;mut iter {
-                if char == '(' {
-                    nesting_level += 1;
-                } else if char == ')' {
-                    if nesting_level == 0 {
-                        break;
-                    }
-                    nesting_level -= 1;
-                }
-                token.push(char);
-            }
-        } else {
-            token = char.to_string();
-        }
-        let length = length_string.parse().unwrap_or(1);
-        result += &amp;token.repeat(length);
-        length_string.clear();
-    }
-    if !length_string.is_empty() {
-        return Err(DecodeRleError::EndWithDigits(
-            length_string.parse().unwrap(),
-        ));
-    }
-    if result.contains('(') {
-        return rle_decode(&amp;result);
-    }
-    Ok(result)
-}
-</code></pre>
-<h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
-<ul>
-<li><a href="https://en.wikipedia.org/wiki/Run-length_encoding">https://en.wikipedia.org/wiki/Run-length_encoding</a>.</li>
-</ul>
+                        <h1 id="游程编码"><a class="header" href="#游程编码">游程编码</a></h1>
 
                     </main>
 
