--- a/level/index.html
+++ b/level/index.html
@@ -200,6 +200,7 @@ Author: Thinking Rabbit
 <li>第 2-9 行, 地图数据, 使用 ASCII 字符表示.</li>
 <li>第 10-11 行, 元数据, 包括关卡标题和作者的信息.</li>
 </ul>
+<h3 id="地图数据"><a class="header" href="#地图数据">地图数据</a></h3>
 <div class="table-wrapper"><table><thead><tr><th>ASCII 符号</th><th>描述</th></tr></thead><tbody>
 <tr><td><code>&lt;SPACE&gt;</code>/<code>-</code>/<code>_</code></td><td>地板</td></tr>
 <tr><td><code>#</code></td><td>墙体 🧱</td></tr>
@@ -211,11 +212,103 @@ Author: Thinking Rabbit
 </tbody></table>
 </div>
 <p>其中地板一共使用了三种符号表示, 是因为连续的空格在某些在线论坛或邮件中可能被截断, 因此使用连字符(<code>-</code>)和下划线(<code>_</code>)来替代.</p>
-<p>除了上面的元数据, 还有一种用于多行注释的特殊元数据. 内容通过 <code>comment:</code> 和 <code>comment-end:</code> 包裹.</p>
+<h3 id="元数据"><a class="header" href="#元数据">元数据</a></h3>
+<p>第 10 行的 <code>Title: Boxworld 1</code> 可以解释为键为 <code>title</code> (不区分大小写), 值为 <code>Boxworld 1</code> 的元数据.<br />
+还有一种用于多行注释的特殊元数据. 内容通过 <code>comment:</code> 和 <code>comment-end:</code> 包裹. 这也是唯一支持值有多行的元数据.</p>
 <p>!!! info
 多行注释还存在一种以 <code>comment:</code> 和 <code>comment_end:</code> 包裹的写法, 与之前提到的多行注释不同，这种多行注释使用下划线(<code>_</code>)来替代连字符(<code>-</code>)分割单词.<br />
 本文将这种格式视为<strong>无效格式</strong>, 其可能是在批量替换 <code>_</code> 和 <code>-</code> 字符时意外产生的.</p>
-<p>关卡可能通过游程编码压缩, 请参见<a href="run_length_encoding.html">游程编码</a>.</p>
+<h2 id="游程编码-"><a class="header" href="#游程编码-">游程编码 🗜️</a></h2>
+<p>游程编码(Run-length encoding, RLE)是无损数据压缩的一种形式, 常被应用于推箱子关卡和解决方案的压缩.</p>
+<pre><code class="language-txt">###
+#.###
+#*$ #
+# @ #
+#####
+</code></pre>
+<p>经 RLE 编码后可得:</p>
+<pre><code class="language-txt">3#
+#.3#
+#*$-#
+#--@#
+5#
+</code></pre>
+<p>可以看出, 虽然编码后的关卡有更小的体积, 但不再能直观地看出关卡的结构.</p>
+<p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
+<pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
+</code></pre>
+<p>只需要对原本的语句进行修改即可提供对 <code>|</code> 分割行的支持:</p>
+<pre><code class="language-rs">for line in str.lines() { ... SKIP ... }
+
+for line in str.split(['\n', '|']) { ... SKIP ... }
+</code></pre>
+<h3 id="编码"><a class="header" href="#编码">编码</a></h3>
+<p>下面是一个简单的 RLE 编码函数的实现:</p>
+<pre><code class="language-rs">pub fn rle_encode(str: &amp;str) -&gt; Result&lt;String, EncodeRleError&gt; {
+    let mut result = String::new();
+    let mut chars = str.chars().peekable();
+    let mut count = 0;
+    while let Some(char) = chars.next() {
+        if char.is_numeric() {
+            return Err(EncodeRleError::InvalidCharacter(char));
+        }
+        count += 1;
+        if chars.peek() != Some(&amp;char) {
+            if count &gt; 1 {
+                result.push_str(&amp;count.to_string());
+            }
+            result.push(char);
+            count = 0;
+        }
+    }
+    Ok(result)
+}
+</code></pre>
+<p>该方法不会使用括号包裹重复的相连子串以提高压缩率.</p>
+<h3 id="解码"><a class="header" href="#解码">解码</a></h3>
+<p>下面是一个 RLE 解码函数的实现:</p>
+<pre><code class="language-rs">pub fn rle_decode(str: &amp;str) -&gt; Result&lt;String, DecodeRleError&gt; {
+    let mut result = String::new();
+
+    let mut length_string = String::new();
+    let mut iter = str.chars();
+    while let Some(char) = iter.next() {
+        if char.is_ascii_digit() {
+            length_string.push(char);
+            continue;
+        }
+        let mut token = String::new();
+        if char == '(' {
+            let mut nesting_level = 0;
+            for char in &amp;mut iter {
+                if char == '(' {
+                    nesting_level += 1;
+                } else if char == ')' {
+                    if nesting_level == 0 {
+                        break;
+                    }
+                    nesting_level -= 1;
+                }
+                token.push(char);
+            }
+        } else {
+            token = char.to_string();
+        }
+        let length = length_string.parse().unwrap_or(1);
+        result += &amp;token.repeat(length);
+        length_string.clear();
+    }
+    if !length_string.is_empty() {
+        return Err(DecodeRleError::EndWithDigits(
+            length_string.parse().unwrap(),
+        ));
+    }
+    if result.contains('(') {
+        return rle_decode(&amp;result);
+    }
+    Ok(result)
+}
+</code></pre>
 <h2 id="其他格式"><a class="header" href="#其他格式">其他格式</a></h2>
 <h3 id="sok"><a class="header" href="#sok">Sok</a></h3>
 <p>推箱子程序 Sokoban YASC 专用格式, 兼容 XSB 格式:</p>
@@ -294,9 +387,13 @@ ___HHH__
   **
 * ** *
 </code></pre>
+<h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Run-length_encoding">https://en.wikipedia.org/wiki/Run-length_encoding</a>.</li>
+</ul>
 <h2 id="参考"><a class="header" href="#参考">参考</a></h2>
 <ul>
-<li><a href="http://sokobano.de/wiki/index.php?title=Level_format">http://sokobano.de/wiki/index.php?title=Level_format</a></li>
+<li><a href="http://sokobano.de/wiki/index.php?title=Level_format">http://sokobano.de/wiki/index.php?title=Level_format</a>.</li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="http://www.mf8-china.com/forum.php">http://www.mf8-china.com/forum.php</a></p>
