deploy: bb909ba7a9573804b64dd099ce153df07f5758ec

--- a/glossary.html
+++ b/glossary.html
@@ -8,7 +8,7 @@
 
         <!-- Custom HTML head -->
         
-        <meta name="description" content="">
+        <meta name="description" content="本文将描述如何实现一个推箱子 📦, 示例代码使用 Rust 语言 🦀 编写.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
