--- a/level/representation.html
+++ b/level/representation.html
@@ -8,7 +8,7 @@
 
         <!-- Custom HTML head -->
         
-        <meta name="description" content="">
+        <meta name="description" content="本文将描述如何实现一个推箱子 📦, 示例代码使用 Rust 语言 🦀 编写.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
