--- a/print.html
+++ b/print.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="cn" class="light" dir="ltr">
+<html lang="zh-Hans-CN" class="light" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
