--- a/level/representation.html
+++ b/level/representation.html
@@ -217,7 +217,7 @@ pub struct Map {
     // ... SKIP ...
 }
 </code></pre>
-<p>因为只需要操作一个数组(而非 $n$ 个数组), 进行调整地图尺寸等操作的代码会更简单高效.
+<p>因为只需要操作一个数组(而非 n 个数组), 进行调整地图尺寸等操作的代码会更简单高效.
 而且能确保动态数组的元素是紧密排列的, 根据数据局部性原理, 读取数据的性能通常会更好.</p>
 <p>重载下标运算符, 以便后续直接通过二维坐标访问地图元素.</p>
 <pre><code class="language-rs">impl Index&lt;Vector2&lt;i32&gt;&gt; for Map {
