--- a/level/construction.html
+++ b/level/construction.html
@@ -248,7 +248,7 @@
 <p>这种实现方式有以下优点:</p>
 <ul>
 <li>支持流式读取并构建关卡. 例如, 通过利用 <code>BufReader</code> <sup class="footnote-reference"><a href="#2">1</a></sup> 支持从大文件中逐步地加载关卡数据, 避免了内存的大量占用和性能瓶颈.</li>
-<li>读取第 $n$ 个关卡. 跳过前 $n-1$ 个关卡, 只对第 $n$ 个关卡的数据进行解析. 可以加快从多个关卡中加载单个关卡的速度.</li>
+<li>读取第 n 个关卡. 跳过前 n-1 个关卡, 只对第 n 个关卡的数据进行解析. 可以加快从多个关卡中加载单个关卡的速度.</li>
 </ul>
 <pre><code class="language-rs">impl Level {
     pub fn load(str: &amp;str) -&gt; impl Iterator&lt;Item = Result&lt;Self, ParseLevelError&gt;&gt; + '_ {
@@ -270,7 +270,7 @@ for level in Level::load(&amp;fs::read_to_string(path).unwrap()).filter_map(|x| 
 }
 </code></pre>
 <p>若循环体在循环的过程中通过 <code>break</code> 语句提前退出循环, 未被循环到的关卡将不会被解析, 从而减少不必要的计算.</p>
-<p>值得注意的是, 虽然在一些编程语言中 <code>Level::load_nth</code> 的实现是多余的, 但在 Rust 中, 迭代器先 <code>map</code> 后 <code>nth</code> 与先 <code>nth</code> 后 <code>map</code> 并<strong>不等价</strong>, 前者会执行 $n$ 次 <code>map</code>, 而后者只会执行一次 <code>map</code>, 显著提高了效率.</p>
+<p>值得注意的是, 虽然在一些编程语言中 <code>Level::load_nth</code> 的实现是多余的, 但在 Rust 中, 迭代器先 <code>map</code> 后 <code>nth</code> 与先 <code>nth</code> 后 <code>map</code> 并<strong>不等价</strong>, 前者会执行 n 次 <code>map</code>, 而后者只会执行一次 <code>map</code>, 显著提高了效率.</p>
 <h3 id="单个关卡的解析"><a class="header" href="#单个关卡的解析">单个关卡的解析</a></h3>
 <h4 id="解析元数据和注释"><a class="header" href="#解析元数据和注释">解析元数据和注释</a></h4>
 <p>定义一个关联函数 <code>Level::from_str</code>, 作为 <code>Level</code> 的构造函数. 该函数只负责解析关卡的元数据和注释, 地图数据的进一步解析则由 <code>Map::from_str</code> 负责:</p>
