--- a/print.html
+++ b/print.html
@@ -486,7 +486,7 @@ pub struct Map {
     // ... SKIP ...
 }
 </code></pre>
-<p>因为只需要操作一个数组(而非 $n$ 个数组), 进行调整地图尺寸等操作的代码会更简单高效.
+<p>因为只需要操作一个数组(而非 n 个数组), 进行调整地图尺寸等操作的代码会更简单高效.
 而且能确保动态数组的元素是紧密排列的, 根据数据局部性原理, 读取数据的性能通常会更好.</p>
 <p>重载下标运算符, 以便后续直接通过二维坐标访问地图元素.</p>
 <pre><code class="language-rs">impl Index&lt;Vector2&lt;i32&gt;&gt; for Map {
@@ -586,7 +586,7 @@ pub struct Level {
 <p>这种实现方式有以下优点:</p>
 <ul>
 <li>支持流式读取并构建关卡. 例如, 通过利用 <code>BufReader</code> <sup class="footnote-reference"><a href="#2">1</a></sup> 支持从大文件中逐步地加载关卡数据, 避免了内存的大量占用和性能瓶颈.</li>
-<li>读取第 $n$ 个关卡. 跳过前 $n-1$ 个关卡, 只对第 $n$ 个关卡的数据进行解析. 可以加快从多个关卡中加载单个关卡的速度.</li>
+<li>读取第 n 个关卡. 跳过前 n-1 个关卡, 只对第 n 个关卡的数据进行解析. 可以加快从多个关卡中加载单个关卡的速度.</li>
 </ul>
 <pre><code class="language-rs">impl Level {
     pub fn load(str: &amp;str) -&gt; impl Iterator&lt;Item = Result&lt;Self, ParseLevelError&gt;&gt; + '_ {
@@ -608,7 +608,7 @@ for level in Level::load(&amp;fs::read_to_string(path).unwrap()).filter_map(|x| 
 }
 </code></pre>
 <p>若循环体在循环的过程中通过 <code>break</code> 语句提前退出循环, 未被循环到的关卡将不会被解析, 从而减少不必要的计算.</p>
-<p>值得注意的是, 虽然在一些编程语言中 <code>Level::load_nth</code> 的实现是多余的, 但在 Rust 中, 迭代器先 <code>map</code> 后 <code>nth</code> 与先 <code>nth</code> 后 <code>map</code> 并<strong>不等价</strong>, 前者会执行 $n$ 次 <code>map</code>, 而后者只会执行一次 <code>map</code>, 显著提高了效率.</p>
+<p>值得注意的是, 虽然在一些编程语言中 <code>Level::load_nth</code> 的实现是多余的, 但在 Rust 中, 迭代器先 <code>map</code> 后 <code>nth</code> 与先 <code>nth</code> 后 <code>map</code> 并<strong>不等价</strong>, 前者会执行 n 次 <code>map</code>, 而后者只会执行一次 <code>map</code>, 显著提高了效率.</p>
 <h3 id="单个关卡的解析"><a class="header" href="#单个关卡的解析">单个关卡的解析</a></h3>
 <h4 id="解析元数据和注释"><a class="header" href="#解析元数据和注释">解析元数据和注释</a></h4>
 <p>定义一个关联函数 <code>Level::from_str</code>, 作为 <code>Level</code> 的构造函数. 该函数只负责解析关卡的元数据和注释, 地图数据的进一步解析则由 <code>Map::from_str</code> 负责:</p>
@@ -1070,6 +1070,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 <div style="break-before: page; page-break-before: always;"></div><h1 id="启发式函数heuristic-function"><a class="header" href="#启发式函数heuristic-function">启发式函数(Heuristic function)</a></h1>
 <p>启发式函数用于指导搜索算法的搜索方向.</p>
 <h2 id="下界lower-bounds"><a class="header" href="#下界lower-bounds">下界(Lower bounds)</a></h2>
+<p>TODO</p>
 <h2 id="特征"><a class="header" href="#特征">特征</a></h2>
 <p>除了通过下界计算得到的启发式函数值, 还有一些特征可以帮助在<br />
 还有一些特征的值可以附加在启发式函数值上, 在确保启发式函数值保持其[容许性(Admissible)]的前提下, 优先搜索有相同启发式函数值的状态中选择更接近最终状态的节点.</p>
