--- a/solver/heuristic_function.html
+++ b/solver/heuristic_function.html
@@ -181,6 +181,7 @@
                         <h1 id="启发式函数heuristic-function"><a class="header" href="#启发式函数heuristic-function">启发式函数(Heuristic function)</a></h1>
 <p>启发式函数用于指导搜索算法的搜索方向.</p>
 <h2 id="下界lower-bounds"><a class="header" href="#下界lower-bounds">下界(Lower bounds)</a></h2>
+<p>TODO</p>
 <h2 id="特征"><a class="header" href="#特征">特征</a></h2>
 <p>除了通过下界计算得到的启发式函数值, 还有一些特征可以帮助在<br />
 还有一些特征的值可以附加在启发式函数值上, 在确保启发式函数值保持其[容许性(Admissible)]的前提下, 优先搜索有相同启发式函数值的状态中选择更接近最终状态的节点.</p>
