--- a/print.html
+++ b/print.html
@@ -1129,7 +1129,7 @@ for x in 1..self.map.dimensions().x - 1 {
             .iter()
             .map(|crate_pos| manhattan_distance(*crate_pos, &amp;position))
             .min()
-            .unwrap();
+            .unwrap(); // 地图上的目标不可能为空 -&gt; 迭代器不可能为空 -&gt; min() 不可能返回 `None`
         lower_bounds.insert(position, lower_bound);
     }
 }
