--- a/solver/heuristic_function.html
+++ b/solver/heuristic_function.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化(WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器(WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="../solver/solving_strategy.html"><strong aria-hidden="true">3.2.</strong> 求解策略</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html" class="active"><strong aria-hidden="true">3.3.</strong> 启发式函数(WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源(WIP)</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表(WIP)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化(WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器(WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="../solver/solving_strategy.html"><strong aria-hidden="true">3.2.</strong> 搜索策略(WIP)</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html" class="active"><strong aria-hidden="true">3.3.</strong> 启发式函数(WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源(WIP)</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表(WIP)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -180,28 +180,41 @@
                     <main>
                         <h1 id="启发式函数heuristic-function"><a class="header" href="#启发式函数heuristic-function">启发式函数(Heuristic function)</a></h1>
 <p>启发式函数用于指导搜索算法的搜索方向.</p>
-<p>与代价函数一样, 启发式函数的实现取决于搜索策略.</p>
+<p>A* 算法的核心是估价函数 $f$, $f(n)=g(n)+h(n)$. 其中:</p>
+<ul>
+<li>$n$ 是某个状态.</li>
+<li>$g(n)$ 为从初始状态到 $n$ 状态的<strong>实际</strong>代价.</li>
+<li>$h(n)$ 为从 $n$ 状态到最终状态的代价的<strong>估计</strong>代价.</li>
+</ul>
+<p>搜索最短路径就是指搜索总代价(即 $f$ 的函数值)最小的路径. 以推箱子为例:</p>
+<ul>
+<li>代价可能指玩家移动数, 也可能指箱子推动数, 这取决于求解器的搜索策略. 因此针对不同的搜索策略, 于代价相关的函数 $g$ 和 $h$ 的实现不同.</li>
+<li>路径就是解决方案.</li>
+</ul>
+<p>该算法总是能搜索到最优路径, 前提是启发式函数 $h$ 满足容许性(Admissible)<sup class="footnote-reference"><a href="#1">1</a></sup>.</p>
 <h2 id="容许性admissible"><a class="header" href="#容许性admissible">容许性(Admissible)</a></h2>
-<p>启发式函数满足容许性(Admissible)<sup class="footnote-reference"><a href="#2">1</a></sup>, 才能确保结果是最优的.</p>
+<p>启发式函数满足容许性, 才能确保结果是最优的. 若函数 $h$ 满足以下条件则满足容许性:</p>
 <p>$$
-\forall n,h(h) \leq h^*(h)
+\forall n,h(n) \leq h^*(n)
 $$</p>
-<p>其中 $h(n)$ 是启发式函数估计的 $n$ 到最终状态的代价, $h^*(n)$ 是 $n$ 到最终状态的代价.</p>
-<p>可以看出, 要确保启发式函数的估计值始终小于或等于实际的最小值才满足容许性, 否则最优的路径可能会被排除.</p>
-<p>假设 $h(n) = 0$, 此时函数 $h$ 满足容许性. 但代价估计值被严重低估, 虽然可以得到最优解, 但没有任何的优化.<br />
-因此函数 $h$ 应该在满足容许性的前提下, 尽可能的接近 $h^*(n)$.</p>
+<p>其中 $h^*(n)$ 是从 $n$ 状态到最终状态的<strong>实际</strong>代价.</p>
+<p>对于最优路径上的任意状态 $m$, 到最终状态的<strong>实际</strong>代价总是为 $h^<em>(m)$. 若 $h(n) &gt; h^</em>(n)$, 在搜索 $g$ 函数值相同的节点时, 一定会跳过最优路径, 进而返回非最优路径.<br />
+函数 $h$ 不满足容许性也可能返回最优路径, 因为 $h(n) &gt; h^*(n)$ 不一定恒成立.</p>
+<h3 id="设计的方向"><a class="header" href="#设计的方向">设计的方向</a></h3>
+<p>假设 $h(n) = 0$, 此时函数 $h$ 满足容许性, 但代价估计值被严重低估. 下一个搜索节点的优先级 $f(n) = g(n)$. 虽然可以得到最优解, 但无法得到 "启发式" 带来的任何的优化.<br />
+理想状态下 $h(n) = h^<em>(n)$, 但这<strong>不可能</strong>. 因此函数 $h$ 应该在满足容许性的前提下, 尽可能的接近 $h^</em>(n)$.</p>
 <h2 id="预计算"><a class="header" href="#预计算">预计算</a></h2>
 <p>启发式函数计算的适合通常会假设地图上只有一个箱子, 因为这样计算出的结果与箱子的位置无关. 在搜索状态的时候箱子的位置会不断发生改变, 但是启发式函数的值不变.<br />
 因此可以提前计启发式函数的值, 供后续搜索时使用.</p>
 <h2 id="下界lower-bounds"><a class="header" href="#下界lower-bounds">下界(Lower bounds)</a></h2>
 <p>下界是一个箱子到任何目标的最短距离.<br />
-根据求解策略有两种下界:</p>
+根据搜索策略有两种下界:</p>
 <ul>
 <li>推动下界.</li>
 <li>移动下界.</li>
 </ul>
 <p>其中推动下界可以用于搜索最优移动数解决方案, 反之则不行. 因为推动下界一定小于移动下界.</p>
-<p>最简单的推动下界计算方法是计算每个箱子到最近目标的曼哈顿距离<sup class="footnote-reference"><a href="#1">2</a></sup>. 曼哈顿距离也是网格中寻路常用的启发式函数的计算方法.</p>
+<p>最简单的推动下界计算方法是计算每个箱子到最近目标的曼哈顿距离<sup class="footnote-reference"><a href="#2">2</a></sup>. 曼哈顿距离也是网格中寻路常用的启发式函数的计算方法.</p>
 <p>TODO: 使用二维数组而非 HashMap 来存储下界.</p>
 <pre><code class="language-rs">fn manhattan_distance(a: Vector2&lt;i32&gt;, b: Vector2&lt;i32&gt;) -&gt; u32 {
     (a.x - b.x).abs() + (a.y - b.y).abs()
@@ -253,11 +266,11 @@ lower_bounds
 <p>玩家全部可达区域可能会被箱子分割为多个区域. 这些区域的数量越少意味着玩家可以移动的范围越大.</p>
 <p>因为区域是被箱子分割的, 因此只需要检测箱子周围的点所属的区域即可获得独立的区域数.
 通过判断箱子在割点上的情况快速判断独立区域的数量.</p>
-<div class="footnote-definition" id="1"><sup class="footnote-definition-label">2</sup>
-<p><a href="https://simple.wikipedia.org/wiki/Manhattan_distance">https://simple.wikipedia.org/wiki/Manhattan_distance</a></p>
-</div>
-<div class="footnote-definition" id="2"><sup class="footnote-definition-label">1</sup>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://en.wikipedia.org/wiki/Admissible_heuristic">https://en.wikipedia.org/wiki/Admissible_heuristic</a></p>
+</div>
+<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
+<p><a href="https://simple.wikipedia.org/wiki/Manhattan_distance">https://simple.wikipedia.org/wiki/Manhattan_distance</a></p>
 </div>
 
                     </main>
