--- a/solver/solving_strategy.html
+++ b/solver/solving_strategy.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>求解策略 - 推箱子教程</title>
+        <title>搜索策略(WIP) - 推箱子教程</title>
 
 
         <!-- Custom HTML head -->
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化(WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器(WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="../solver/solving_strategy.html" class="active"><strong aria-hidden="true">3.2.</strong> 求解策略</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.3.</strong> 启发式函数(WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源(WIP)</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表(WIP)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化(WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器(WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="../solver/solving_strategy.html" class="active"><strong aria-hidden="true">3.2.</strong> 搜索策略(WIP)</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.3.</strong> 启发式函数(WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源(WIP)</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表(WIP)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -178,7 +178,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="求解策略"><a class="header" href="#求解策略">求解策略</a></h1>
+                        <h1 id="搜索策略"><a class="header" href="#搜索策略">搜索策略</a></h1>
 <h2 id="什么是最短路径"><a class="header" href="#什么是最短路径">什么是最短路径?</a></h2>
 <p>在常见的寻路算法中, <strong>最短</strong>可能是指距离最短, 也可能是指时间最短.<br />
 在推箱子中也是如此, 既有移动数最优解决方案, 也有推动数最优解决方案.</p>
