deploy: 04df1f752ee98bc861e4d4d5725c3d313b12604e

--- a/print.html
+++ b/print.html
@@ -212,7 +212,7 @@
 <li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
 </ul>
 <h2 id="数学公式"><a class="header" href="#数学公式">数学公式</a></h2>
-<p>与算法相关的部分可能有数学公式, 这些公式不是让读者直接阅读的, 而是方便读者在有新的理解后可以用来验证自己的想法.</p>
+<p>关于算法的部分可能会涉及一些数学公式. 这些公式并非直接供读者阅读, 而是为了方便读者在对算法有新的理解后用来验证自己的想法.</p>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
 <p>完整的项目代码位于:</p>
 <ul>
