deploy: f3ea00624d7999d63e6ec7fd3a0996b5e50099ab

--- a/solver/index.html
+++ b/solver/index.html
@@ -180,6 +180,7 @@
                     <main>
                         <h1 id="求解器solver"><a class="header" href="#求解器solver">求解器(Solver)</a></h1>
 <p>顾名思义, 求解器是用于自动求解推箱子关卡的程序.</p>
+<p>本文不会详细介绍搜索算法的工作原理和实现细节, 相比推箱子求解, 一般的寻路算法更适合读者理解搜索算法.</p>
 <p>寻路算法是在<strong>路径点</strong>组成的图中寻找一条从<strong>初始位置</strong>到<strong>最终位置</strong>的路径.<br />
 求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径, 即移动箱子的顺序.</p>
 <h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
