deploy: 2ff4c245ec2c14a27c082b1f116a6dd382cd5464

--- a/solver/solving_strategy.html
+++ b/solver/solving_strategy.html
@@ -187,7 +187,7 @@
 <ul>
 <li><code>Fast</code>: A* 算法可以用于搜索最短路径, 但不一定只能搜索最短路径. 通过提高启发式函数的权重可以提高搜索到任何解决方案的效率, 即<strong>速度</strong>.</li>
 <li><code>OptimalPush</code>: 搜索<strong>推动数</strong>最少的解决方案.</li>
-<li><code>OptimalPush</code>: 搜索<strong>移动数</strong>最少的解决方案.</li>
+<li><code>OptimalMove</code>: 搜索<strong>移动数</strong>最少的解决方案.</li>
 <li>搜索<strong>推动数</strong>最少其次<strong>移动数</strong>最少的解决方案.</li>
 <li>搜索<strong>移动数</strong>最少其次<strong>推动数</strong>最少的解决方案.</li>
 </ul>
