--- a/print.html
+++ b/print.html
@@ -1122,7 +1122,7 @@ $$</p>
 理想状态下 $h(n) = h^<em>(n)$, 但这<strong>不可能</strong>. 因此函数 $h$ 应该在满足容许性的前提下, 尽可能的接近 $h^</em>(n)$.</p>
 <hr />
 <p>对于网格上的寻路算法, 一种启发式函数的实现是计算当前位置和目标位置之间的曼哈顿距离. 相比之下, 推箱子的启发式函数实现并不那么显而易见.<br />
-理想状态下, 对于任意关卡的解决方案 $n_1, n_2, ... , n_k$:</p>
+理想状态下, 对于任意关卡的任意解决方案 $n_1, n_2, ... , n_k$:</p>
 <ul>
 <li>$h(n_i) &gt; h(n_{i+1})$</li>
 <li>$h(n_1) = 0$</li>
