deploy: 254aa200847e52c70d4a6597fe937831c5a76665

--- a/solver/index.html
+++ b/solver/index.html
@@ -186,6 +186,9 @@
 <h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
 <ul>
 <li>
+<p>广度优先搜索算法.</p>
+</li>
+<li>
 <p><a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>.</p>
 </li>
 <li>
@@ -199,6 +202,7 @@
 </li>
 </ul>
 <p>本文将描述如何创建一个基于 <a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>的求解器.</p>
+<p>TODO: 说明为什么不使用广度优先搜索算法. 和 A* 算法进行简单的对比.</p>
 <h2 id="表示状态"><a class="header" href="#表示状态">表示状态</a></h2>
 <p>顾名思义, 状态用于表示关卡的状态.</p>
 <pre><code class="language-rs">pub struct State {
