--- a/solver/index.html
+++ b/solver/index.html
@@ -193,14 +193,15 @@
 # @$.#    #@ $.#    #  @*#
 ######    ######    ######
 </code></pre>
-<p>用图的方式可以表示为:</p>
-<pre><code class="language-mermaid">graph TD;
-    A--&gt;|l| B;
-    B--&gt;|r| A;
-    A--&gt;|R| C;
-    C--&gt;|L| A;
+<p>为了更直观地展示这些状态之间的转换关系, 可以用图的形式表示为:</p>
+<pre><code class="language-mermaid">graph TD
+    A--&gt;|l| B
+    B--&gt;|r| A
+    A--&gt;|R| C
+    C--&gt;|L| A
 </code></pre>
-<p>其中 $A$ 为初始状态, $C$ 为最终状态, <code>l</code> 和 <code>r</code> 分别表示向左和向右移动, <code>L</code> 和 <code>R</code> 分别表示向左和向右推动或拉动.</p>
+<p>这是一个以<strong>状态</strong>(State)为节点, <strong>动作</strong>(Action)为边的有向图.<br />
+其中 $A$ 为初始状态, $C$ 为最终状态, <code>l</code> 和 <code>r</code> 分别表示玩家向左和向右移动, <code>R</code> 和 <code>L</code> 分别表示玩家向右推动和向左拉动.</p>
 <p>求解器的工作是通过初始状态生成推箱子关卡的图, 然后寻找到最终状态的路径. 以上图为例, 寻找从状态 $A$ 到状态 $C$ 的路径, 即 <code>R</code>.</p>
 <p>下面将描述如何使用搜索算法来搜索这条路径.</p>
 <h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
