--- a/print.html
+++ b/print.html
@@ -1048,8 +1048,8 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 </code></pre>
 <p>这是一个以<strong>状态</strong>(State)为节点, <strong>动作</strong>(Action)为边的有向图.<br />
 其中 $A$ 为初始状态, $C$ 为最终状态, <code>l</code> 和 <code>r</code> 分别表示玩家向左和向右移动, <code>R</code> 和 <code>L</code> 分别表示玩家向右推动和向左拉动.</p>
-<p>求解器的工作是通过初始状态生成推箱子关卡的图, 然后寻找到最终状态的路径. 以上图为例, 寻找从状态 $A$ 到状态 $C$ 的路径, 即 <code>R</code>.</p>
-<p>下面将描述如何使用搜索算法来搜索这条路径.</p>
+<p>求解器的工作原理是首先根据初始状态生成推箱子关卡的图, 然后在这个图中寻找从初始状态到最终状态的路径. 以上图为例, 就是寻找从状态 $A$ 到状态 $C$ 的路径, 即 <code>R</code>.</p>
+<p>下面将详细探讨如何利用搜索算法来找到这条路径.</p>
 <h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
 <ul>
 <li>
