--- a/solver/index.html
+++ b/solver/index.html
@@ -202,7 +202,7 @@
 </code></pre>
 <p>这是一个以<strong>状态</strong>(State)为节点, <strong>动作</strong>(Action)为边的有向图.<br />
 其中 $A$ 为初始状态, $C$ 为最终状态, <code>l</code> 和 <code>r</code> 分别表示玩家向左和向右移动, <code>R</code> 和 <code>L</code> 分别表示玩家向右推动和向左拉动.</p>
-<p>理论上, 状态 $C$ 还可以衍生出更多子状态, 但因为其是最终状态, 因此这里不再展开.</p>
+<p>理论上, 状态 $C$ 还可以衍生出更多子状态, 但因为其是最终状态, 搜索算法无需继续搜索, 因此这里不再展开.</p>
 <p>求解器的工作原理是首先根据初始状态生成推箱子关卡的图, 然后在这个图中寻找从初始状态到最终状态的路径. 以上图为例, 就是寻找从状态 $A$ 到状态 $C$ 的路径, 即 <code>R</code>.</p>
 <p>下面将详细探讨如何利用搜索算法来找到这条路径.</p>
 <h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
