--- a/solver/heuristic_function.html
+++ b/solver/heuristic_function.html
@@ -184,7 +184,7 @@
 <ul>
 <li>$n$ 是某个状态.</li>
 <li>$g(n)$ 为从初始状态到 $n$ 状态的<strong>实际</strong>代价.</li>
-<li>$h(n)$ 为从 $n$ 状态到最终状态的代价的<strong>估计</strong>代价.</li>
+<li>$h(n)$ 为从 $n$ 状态到目标状态的代价的<strong>估计</strong>代价.</li>
 </ul>
 <p>搜索最短路径就是指搜索总代价(即 $f$ 的函数值)最小的路径. 以推箱子为例:</p>
 <ul>
@@ -197,11 +197,11 @@
 <p>$$
 \forall n,h(n) \leq h^*(n)
 $$</p>
-<p>其中 $h^*(n)$ 是从 $n$ 状态到最终状态的<strong>实际</strong>代价.</p>
-<p>对于最优路径上的任意状态 $m$, 到最终状态的<strong>实际</strong>代价总是为 $h^<em>(m)$. 若 $h(n) &gt; h^</em>(n)$, 在搜索 $g$ 函数值相同的节点时, 一定会跳过最优路径, 进而返回非最优路径.<br />
+<p>其中 $h^*(n)$ 是从 $n$ 状态到目标状态的<strong>实际</strong>代价.</p>
+<p>对于最优路径上的任意状态 $m$, 到目标状态的<strong>实际</strong>代价总是为 $h^<em>(m)$. 若 $h(n) &gt; h^</em>(n)$, 在搜索 $g$ 函数值相同的节点时, 一定会跳过最优路径, 进而返回非最优路径.<br />
 函数 $h$ 不满足容许性也可能返回最优路径, 因为 $h(n) &gt; h^*(n)$ 不一定恒成立.</p>
 <h2 id="设计的方向"><a class="header" href="#设计的方向">设计的方向</a></h2>
-<p>假设 $h(n) = 0$, 此时函数 $h$ 满足容许性, 但代价估计值被严重低估. 下一个搜索节点的优先级 $f(n) = g(n)$. 虽然可以得到最优解, 但无法得到 "启发式" 带来的任何的优化.<br />
+<p>假设 $h(n) = 0$, 此时函数 $h$ 满足容许性, 但不再能启发搜索方向, 该情况下的 A* 算法也被称之为相同代价搜索(Uniform-cost search, UCS), 下一个搜索节点的优先级为 $f(n) = g(n)$, 行为与 BFS <strong>类似</strong>. 虽然可以得到最优解, 但无法得到 "启发式" 带来的任何的优化.<br />
 理想状态下 $h(n) = h^<em>(n)$, 但这<strong>不可能</strong>. 因此函数 $h$ 应该在满足容许性的前提下, 尽可能的接近 $h^</em>(n)$.</p>
 <hr />
 <p>对于网格上的寻路算法, 一种启发式函数的实现是计算当前位置和目标位置之间的曼哈顿距离. 相比之下, 推箱子的启发式函数实现并不那么显而易见.<br />
@@ -255,7 +255,7 @@ lower_bounds
 其中函数 <code>manhattan_distance</code> 的时间复杂度为 $O(1)$.</p>
 <p>该方法的有点是计算十分快速, 缺点是其忽视了墙体对玩家和箱子的阻碍, 可能严重低估了推动下界.</p>
 <h2 id="实现"><a class="header" href="#实现">实现</a></h2>
-<p>启发式函数需要计算当前状态到最终状态的下界.<br />
+<p>启发式函数需要计算当前状态到目标状态的下界.<br />
 所有箱子所在位置的下界之和.</p>
 <pre><code class="language-rs">impl State {
     fn calculate_lower_bound(&amp;self, solver: &amp;Solver) -&gt; usize {
@@ -269,7 +269,7 @@ lower_bounds
 </code></pre>
 <h2 id="特征"><a class="header" href="#特征">特征</a></h2>
 <p>除了通过下界计算得到的启发式函数值, 还有一些特征可以帮助在<br />
-还有一些特征的值可以附加在启发式函数值上, 在确保启发式函数值保持其容许性的前提下, 优先搜索有相同启发式函数值的状态中选择更接近最终状态的节点.</p>
+还有一些特征的值可以附加在启发式函数值上, 在确保启发式函数值保持其容许性的前提下, 优先搜索有相同启发式函数值的状态中选择更接近目标状态的节点.</p>
 <h3 id="连接性特征"><a class="header" href="#连接性特征">连接性特征</a></h3>
 <p>玩家全部可达区域可能会被箱子分割为多个区域. 这些区域的数量越少意味着玩家可以移动的范围越大.</p>
 <p>因为区域是被箱子分割的, 因此只需要检测箱子周围的点所属的区域即可获得独立的区域数.
