deploy: 30bdd7e540335eeb1f79e2e3234e0a4e53ac21f8

--- a/solver/index.html
+++ b/solver/index.html
@@ -213,11 +213,11 @@
 <p>广度优先搜索算法(Breadth-first search, BFS)<sup class="footnote-reference"><a href="#2">2</a></sup>.</p>
 </li>
 <li>
-<p>A* 搜索算法<sup class="footnote-reference"><a href="#3">3</a></sup>.</p>
+<p>A* 搜索算法<sup class="footnote-reference"><a href="#3">3</a></sup></p>
 <p>A* 与 BFS 在最坏情况下的时间复杂度均为 $O(b^d)$. 但 A* 算法是一种最佳优先搜索(Best-first search)算法, 会优先探索最有希望的节点.</p>
 </li>
 <li>
-<p>IDA* 搜索算法<sup class="footnote-reference"><a href="#4">4</a></sup>.</p>
+<p>IDA* 搜索算法<sup class="footnote-reference"><a href="#4">4</a></sup></p>
 <p>相比空间复杂度为 $O(b^d)$ 的 A* 算法, IDA* 算法的空间复杂度为 $O(d)$.</p>
 </li>
 <li>
