--- a/glossary.html
+++ b/glossary.html
@@ -182,6 +182,7 @@
 <div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
 <tr><td>求解器</td><td>solver</td></tr>
 <tr><td>解/解决方案</td><td>solution</td></tr>
+<tr><td>动作</td><td>action</td></tr>
 </tbody></table>
 </div>
                     </main>
