deploy: e26c95c6746738e0d0c4a6e30fcfb54acb6f92c0

--- a/solver/index.html
+++ b/solver/index.html
@@ -254,6 +254,9 @@
 <p>记录已探索过的节点.</p>
 <p>复杂推箱子关卡的图可能存在环(Loop), 这也是为什么推箱子关卡的状态可以用图表示, 却无法用树(Tree)表示的原因.</p>
 <hr />
+<h2 id="双向搜索"><a class="header" href="#双向搜索">双向搜索</a></h2>
+<p>搜索目标状态到初始状态的路径.</p>
+<hr />
 <h2 id="割点"><a class="header" href="#割点">割点</a></h2>
 <p>通过割点可以在常量时间内判断两点是否是连通的.</p>
 <hr />
