deploy: 5800faad57ed2480e3904ee5cef608c2c0a9ea82

--- a/level/index.html
+++ b/level/index.html
@@ -447,6 +447,8 @@ ___HHH__
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
     </div>
