--- a/level/construction.html
+++ b/level/construction.html
@@ -667,6 +667,8 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
     </div>
