--- a/level/representation.html
+++ b/level/representation.html
@@ -294,6 +294,8 @@ pub struct Level {
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
     </div>
