--- a/print.html
+++ b/print.html
@@ -526,14 +526,14 @@ pub struct Level {
 <li>多个关卡之间的分割.</li>
 <li>单个关卡的解析.</li>
 </ol>
-<pre><code class="language-mermaid">flowchart LR
+<pre class="mermaid">flowchart LR
     A[包含多个关卡的字符串] --&gt;|Level::to_group| B
     B[包含单个关卡的字符串] --&gt; C{是否经过\n RLE 压缩?}
     C --&gt;|是| D[RLE 压缩字符串]
     C --&gt;|否| E
     D --&gt;|rle_decode| E
     E[非 RLE 压缩字符串]
-</code></pre>
+</pre>
 <h3 id="多个关卡之间的分割"><a class="header" href="#多个关卡之间的分割">多个关卡之间的分割</a></h3>
 <p>定义关联函数 <code>to_groups</code>, 接受包含多个关卡的字符串, 返回包含单个关卡的字符串切片的迭代器.</p>
 <pre><code class="language-rs">impl Level {
@@ -1048,12 +1048,12 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 ######    ######    ######
 </code></pre>
 <p>为了更直观地展示这些状态之间的转换关系, 可以用图的形式表示为:</p>
-<pre><code class="language-mermaid">graph TD
+<pre class="mermaid">graph TD
     A--&gt;|l| B
     B--&gt;|r| A
     A--&gt;|R| C
     C--&gt;|L| A
-</code></pre>
+</pre>
 <p>这是一个以状态(State)为节点(Vertex), 动作(Action)为边(Edge)的有向图.<br />
 其中 $A$ 为初始状态(Initial state, IS), $C$ 为目标状态(Goal state, GS), <code>l</code> 和 <code>r</code> 分别表示玩家向左和向右移动, <code>R</code> 和 <code>L</code> 分别表示玩家向右推动和向左拉动.</p>
 <p>理论上, 状态 $C$ 还可以衍生出更多子状态, 但因为其是目标状态, 搜索算法无需继续搜索, 因此这里不再展开.</p>
